<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HSLU - Mobile Programming"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/k1_text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:background="@color/colorPrimary"
                android:text="@string/kapitel_1"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="12dp"
                android:text="@string/k1_text" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:orientation="horizontal">

                <RadioButton
                    android:id="@+id/LinearLayoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:onClick="choosRadioButton"
                    android:text="@string/k1_rbutton_1" />

                <RadioButton
                    android:id="@+id/RelativLayoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="choosRadioButton"
                    android:text="@string/k1_rbutton_2" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/kapitel_2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k2_text" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:background="@color/colorPrimary"
                android:text="@string/kapitel_3"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k3_button" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>